fix: scrollbar color isssue on firefox

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -236,6 +236,7 @@ body {
   background: #fff;
   font-family: 'Inter', sans-serif;
   color: #363636;
+  scrollbar-color: transparent transparent;
 }
 
 @keyframes refreshIconSpin {
